--- a/index.html
+++ b/index.html
@@ -70,27 +70,29 @@ Also see <a href="https://arxiv.org/search/?searchtype=author&query=&quot;Steven
 </p>
 
 <ul>
-	<li>Wronskians, total positivity, and real Schubert calculus. <a href="https://arxiv.org/abs/2110.02301">arXiv:2110.02301</a>
+<li>(with Anthony M. Bloch) On two notions of total positivity for partial flag varieties. <a href="https://arxiv.org/abs/2206.05806">arXiv:2206.05806</a>
 
-	<li>(with Anthony M. Bloch) Gradient flows, adjoint orbits, and the topology of totally nonnegative flag varieties. <a href="https://arxiv.org/abs/2109.04558">arXiv:2109.04558</a>
+<li>Wronskians, total positivity, and real Schubert calculus. <a href="https://arxiv.org/abs/2110.02301">arXiv:2110.02301</a>
 
-	<li>(with John Machacek) Shelling the <i>m</i>=1 amplituhedron. <a href="https://arxiv.org/abs/2104.02786">arXiv:2104.02786</a>
+<li>(with Anthony M. Bloch) Gradient flows, adjoint orbits, and the topology of totally nonnegative flag varieties. <a href="https://arxiv.org/abs/2109.04558">arXiv:2109.04558</a>
 
-	<li>(with Pavel Galashin and Thomas Lam) Regularity theorem for totally nonnegative flag varieties. <a href="https://doi.org/10.1090/jams/983"><i>J. Amer. Math. Soc.</i> 35 (2022), no. 2, 513&ndash;579</a>. <a href="https://arxiv.org/abs/1904.00527">arXiv:1904.00527</a>
+<li>(with John Machacek) Shelling the <i>m</i>=1 amplituhedron. <a href="https://arxiv.org/abs/2104.02786">arXiv:2104.02786</a>
 
-	<li>Moment curves and cyclic symmetry for positive Grassmannians. <a href="https://doi.org/10.1112/blms.12280"><i>Bull. Lond. Math. Soc.</i> 51 (2019), no. 5, 900&ndash;916</a>. <a href="https://arxiv.org/abs/1805.06004">arXiv:1805.06004</a>
+<li>(with Pavel Galashin and Thomas Lam) Regularity theorem for totally nonnegative flag varieties. <a href="https://doi.org/10.1090/jams/983"><i>J. Amer. Math. Soc.</i> 35 (2022), no. 2, 513&ndash;579</a>. <a href="https://arxiv.org/abs/1904.00527">arXiv:1904.00527</a>
 
-	<li>(with Pavel Galashin and Thomas Lam) The totally nonnegative part of <i>G/P</i> is a ball. <a href="https://doi.org/10.1016/j.aim.2019.05.009"><i>Adv. Math.</i> 351 (2019), 614&ndash;620</a>. <a href="https://arxiv.org/abs/1801.08953">arXiv:1801.08953</a>
+<li>Moment curves and cyclic symmetry for positive Grassmannians. <a href="https://doi.org/10.1112/blms.12280"><i>Bull. Lond. Math. Soc.</i> 51 (2019), no. 5, 900&ndash;916</a>. <a href="https://arxiv.org/abs/1805.06004">arXiv:1805.06004</a>
 
-	<li>(with Lauren K. Williams and Yan X Zhang) Decompositions of amplituhedra. Appendix written with Hugh Thomas. <a href="https://doi.org/10.4171/AIHPD/87"><i>Ann. Inst. Henri Poincar&eacute; D</i> 7 (2020), no. 3, 303&ndash;363</a>. <a href="https://arxiv.org/abs/1708.09525">arXiv:1708.09525</a>
+<li>(with Pavel Galashin and Thomas Lam) The totally nonnegative part of <i>G/P</i> is a ball. <a href="https://doi.org/10.1016/j.aim.2019.05.009"><i>Adv. Math.</i> 351 (2019), 614&ndash;620</a>. <a href="https://arxiv.org/abs/1801.08953">arXiv:1801.08953</a>
 
-	<li>(with Pavel Galashin and Thomas Lam) The totally nonnegative Grassmannian is a ball. <a href="https://doi.org/10.1016/j.aim.2021.108123"><i>Adv. Math.</i> 397 (2022), Paper No. 108123, 23 pp</a>. <a href="https://arxiv.org/abs/1707.02010">arXiv:1707.02010</a>
+<li>(with Lauren K. Williams and Yan X Zhang) Decompositions of amplituhedra. Appendix written with Hugh Thomas. <a href="https://doi.org/10.4171/AIHPD/87"><i>Ann. Inst. Henri Poincar&eacute; D</i> 7 (2020), no. 3, 303&ndash;363</a>. <a href="https://arxiv.org/abs/1708.09525">arXiv:1708.09525</a>
 
-	<li>(with Lauren K. Williams) The <i>m</i>=1 amplituhedron and cyclic hyperplane arrangements. <a href="https://doi.org/10.1093/imrn/rnx140"><i>Int. Math. Res. Not. IMRN</i> (2019), no. 5, 1401&ndash;1462</a>. <a href="https://arxiv.org/abs/1608.08288">arXiv:1608.08288</a>
+<li>(with Pavel Galashin and Thomas Lam) The totally nonnegative Grassmannian is a ball. <a href="https://doi.org/10.1016/j.aim.2021.108123"><i>Adv. Math.</i> 397 (2022), Paper No. 108123, 23 pp</a>. <a href="https://arxiv.org/abs/1707.02010">arXiv:1707.02010</a>
 
-	<li>Sign variation, the Grassmannian, and total positivity. <a href="https://doi.org/10.1016/j.jcta.2016.08.003"><i>J. Combin. Theory Ser. A</i> 145 (2017), 308&ndash;339</a>. <a href="https://arxiv.org/abs/1503.05622">arXiv:1503.05622</a>
+<li>(with Lauren K. Williams) The <i>m</i>=1 amplituhedron and cyclic hyperplane arrangements. <a href="https://doi.org/10.1093/imrn/rnx140"><i>Int. Math. Res. Not. IMRN</i> (2019), no. 5, 1401&ndash;1462</a>. <a href="https://arxiv.org/abs/1608.08288">arXiv:1608.08288</a>
 
-	<li>(with R. P. Anstee) Forbidden Configurations: Exact bounds determined by critical substructures. <a href="https://doi.org/10.37236/322"><i>Electronic J. Combin.</i> 17 (2010), no. 1, Research Paper 50, 27 pp.</a>
+<li>Sign variation, the Grassmannian, and total positivity. <a href="https://doi.org/10.1016/j.jcta.2016.08.003"><i>J. Combin. Theory Ser. A</i> 145 (2017), 308&ndash;339</a>. <a href="https://arxiv.org/abs/1503.05622">arXiv:1503.05622</a>
+
+<li>(with R. P. Anstee) Forbidden Configurations: Exact bounds determined by critical substructures. <a href="https://doi.org/10.37236/322"><i>Electronic J. Combin.</i> 17 (2010), no. 1, Research Paper 50, 27 pp.</a>
 </ul>
 
 <hr>
@@ -98,8 +100,8 @@ Also see <a href="https://arxiv.org/search/?searchtype=author&query=&quot;Steven
 <h3>Teaching (University of Michigan)</h3>
 
 <ul>
-	<li>Winter 2019: <a href="https://umich.instructure.com/courses/267292">Math 217 (Linear algebra)</a>, section 10.<br>
-	<li>Fall 2018: <a href="https://umich.instructure.com/courses/244050">Math 217 (Linear algebra)</a>, sections 1 and 4.<br>
+	<li>Winter 2019: Math 217 (Linear algebra), section 10.<br>
+	<li>Fall 2018: Math 217 (Linear algebra), sections 1 and 4.<br>
 	<li>Winter 2018: <a href="566w18/index.html">Math 566 (Algebraic combinatorics)</a>.
 	<li>Fall 2017: <a href="http://www.math.lsa.umich.edu/courses/115/">Math 115 (Calculus I)</a>, sections 18 and 38.<br>
 </ul>
