--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@ Also see <a href="https://arxiv.org/search/?searchtype=author&query=&quot;Steven
 </p>
 
 <ul>
+<li>(with Hugh Thomas) <i>q</i>-Whittaker functions, finite fields, and Jordan forms. <a href="https://arxiv.org/abs/2207.12590">arXiv:2207.12590</a>
+
 <li>(with Anthony M. Bloch) On two notions of total positivity for partial flag varieties. <a href="https://arxiv.org/abs/2206.05806">arXiv:2206.05806</a>
 
 <li>Wronskians, total positivity, and real Schubert calculus. <a href="https://arxiv.org/abs/2110.02301">arXiv:2110.02301</a>
