--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	a:hover{text-decoration:underline;}
 </style>
 
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="favicon.png" />
 
 </head>
 
@@ -30,15 +30,17 @@
 				</tr>
 
 				<tr valign="top">
-					<td valign="top" style="padding-right:32;">
-						LaCIM, Universit&eacute; du Qu&eacute;bec &agrave; Montr&eacute;al<br>
-						CP 8888, Succ. Centre-ville<br>
-						Montr&eacute;al, QC, Canada H3C 3P8
+					<td valign="top" style="padding-right:40;">
+						Department of Mathematics<br>
+						University of Notre Dame<br>
+						255 Hurley Hall<br>
+						Notre Dame, IN 46556
 					</td>
 
 					<td valign="top">
-						Bureau: 4130 Pavillon Pr&eacute;sident-Kennedy<br>
-						Adresse courriel: ka<!--despam-->rp&#x2e;ste<!--despam-->ven<span>&#x40;</span><span>courrier&#x2e;uqam&#x2e;c</span>a
+						Office: 108 <a href="https://map.nd.edu/#/placemarks/1082">Hayes-Healy Center</a><br>
+						Email: sk<!--despam-->a<!--despam-->rp2<span>&#x40;</span><span>nd&#x2e;e</span>du<br>
+						Office phone: 574-631-8706 
 					</td>
 				</tr>
 			</table>
@@ -49,11 +51,7 @@
 <hr>
 
 <p>
-Je suis un stagiaire postdoctoral en math&eacute;matiques au <a href="http://lacim.uqam.ca/fr/">LaCIM</a> (Laboratoire de combinatoire et d'informatique math&eacute;matique) de <a href="https://uqam.ca/">l'UQAM</a>. Je m'int&eacute;resse &agrave; la combinatoire alg&eacute;brique.
-</p>
-
-<p>
-I am a postdoctoral fellow in mathematics at <a href="http://lacim.uqam.ca/en/">LaCIM</a> (Laboratoire de combinatoire et d'informatique math&eacute;matique) at <a href="https://uqam.ca/english/about/">UQAM</a>. I am interested in algebraic combinatorics.
+I am a visiting assistant professor in mathematics at the <a href="https://math.nd.edu/">University of Notre Dame</a>. I am interested in algebraic combinatorics.
 </p>
 <hr>
 
@@ -98,6 +96,13 @@ Also see <a href="https://arxiv.org/search/?searchtype=author&query=&quot;Steven
 </ul>
 
 <hr>
+
+<h3>Teaching (University of Notre Dame)</h3>
+
+<ul>
+	<li>Fall 2022: <a href="https://canvas.nd.edu/courses/50691">Math 30530 (Introduction to probability)</a>.<br>
+</ul>
+</p>
 
 <h3>Teaching (University of Michigan)</h3>
 
