--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@ Also see <a href="https://arxiv.org/search/?searchtype=author&query=&quot;Steven
 <h3>Talk slides</h3>
 
 <ul>
+<li>University of Michigan, September 2022: <a href="michigan2022.pdf"><i>q</i>-Whittaker functions, finite fields, and Jordan forms</a><br>
+
 <li>University of Notre Dame, September 2022: <a href="notredame2022.pdf">Wronskians, total positivity, and real Schubert calculus</a><br>
 
 <li>University of Washington, April 2022: <a href="uwashington2022.pdf"><i>q</i>-Whittaker functions, finite fields, and Jordan forms</a><br>
