--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ Also see <a href="https://arxiv.org/search/?searchtype=author&query=&quot;Steven
 
 <li>Wronskians, total positivity, and real Schubert calculus. <a href="https://arxiv.org/abs/2110.02301">arXiv:2110.02301</a>
 
-<li>(with Anthony M. Bloch) Gradient flows, adjoint orbits, and the topology of totally nonnegative flag varieties. <a href="https://arxiv.org/abs/2109.04558">arXiv:2109.04558</a>
+<li>(with Anthony M. Bloch) Gradient flows, adjoint orbits, and the topology of totally nonnegative flag varieties. <a href="https://doi.org/10.1007/s00220-022-04540-5"><i>Comm. Math. Phys.</i> (to appear)</a>. <a href="https://arxiv.org/abs/2109.04558">arXiv:2109.04558</a>
 
-<li>(with John Machacek) Shelling the <i>m</i>=1 amplituhedron. <a href="https://arxiv.org/abs/2104.02786">arXiv:2104.02786</a>
+<li>(with John Machacek) Shelling the <i>m</i>=1 amplituhedron. <a href="https://escholarship.org/uc/combinatorial_theory"><i>Comb. Theory</i> (to appear)</a>. <a href="https://arxiv.org/abs/2104.02786">arXiv:2104.02786</a>
 
 <li>(with Pavel Galashin and Thomas Lam) Regularity theorem for totally nonnegative flag varieties. <a href="https://doi.org/10.1090/jams/983"><i>J. Amer. Math. Soc.</i> 35 (2022), no. 2, 513&ndash;579</a>. <a href="https://arxiv.org/abs/1904.00527">arXiv:1904.00527</a>
 
