--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Also see <a href="https://arxiv.org/search/?searchtype=author&query=&quot;Steven
 <ul>
 <li>(with Hugh Thomas) <i>q</i>-Whittaker functions, finite fields, and Jordan forms. <a href="https://arxiv.org/abs/2207.12590">arXiv:2207.12590</a>
 
-<li>(with Anthony M. Bloch) On two notions of total positivity for partial flag varieties. <a href="https://www.sciencedirect.com/journal/advances-in-mathematics"><i>Adv. Math.</i> (to appear)</a>. <a href="https://arxiv.org/abs/2206.05806">arXiv:2206.05806</a>
+<li>(with Anthony M. Bloch) On two notions of total positivity for partial flag varieties. <a href="https://doi.org/10.1016/j.aim.2022.108855"><i>Adv. Math.</i> 414 (2023), Paper No. 108855, 24 pp</a>. <a href="https://arxiv.org/abs/2206.05806">arXiv:2206.05806</a>
 
 <li>Wronskians, total positivity, and real Schubert calculus. <a href="https://arxiv.org/abs/2110.02301">arXiv:2110.02301</a>
 
@@ -100,6 +100,7 @@ Also see <a href="https://arxiv.org/search/?searchtype=author&query=&quot;Steven
 <h3>Teaching (University of Notre Dame)</h3>
 
 <ul>
+	<li>Spring 2023: <a href="https://www3.nd.edu/~craicu/20580Spring2023/math20580.html">Math 20580 (Introduction to linear algebra and differential equations)</a>, section 3; <a href="https://canvas.nd.edu/courses/63089">Math 40210 (Basic combinatorics)</a>.<br>
 	<li>Fall 2022: <a href="https://canvas.nd.edu/courses/50691">Math 30530 (Introduction to probability)</a>.<br>
 </ul>
 </p>
