--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@ Also see <a href="https://arxiv.org/search/?searchtype=author&query=&quot;Steven
 <h3>Talk slides</h3>
 
 <ul>
+<li>Washington University, April 2023: <a href="washu2023.pdf">Gradient flows on totally nonnegative flag varieties</a><br>
+
 <li>University of Kentucky, March 2023: <a href="kentucky2023.pdf"><i>q</i>-Whittaker functions, finite fields, and Jordan forms</a><br>
 
 <li>University of Michigan, September 2022: <a href="michigan2022.pdf"><i>q</i>-Whittaker functions, finite fields, and Jordan forms</a><br>
