--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@ Also see <a href="https://arxiv.org/search/?searchtype=author&query=&quot;Steven
 </p>
 
 <ul>
+<li>(with Anthony M. Bloch) Symmetric Toda, gradient flows, and tridiagonalization. <a href="https://www.sciencedirect.com/journal/physica-d-nonlinear-phenomena"><i>Phys. D</i> (to appear)</a>, in honor of Hermann Flaschka. <a href="https://arxiv.org/abs/2304.10697">arXiv:2304.10697</a>
+
 <li>(with Hugh Thomas) <i>q</i>-Whittaker functions, finite fields, and Jordan forms. <a href="https://arxiv.org/abs/2207.12590">arXiv:2207.12590</a>
 
 <li>(with Anthony M. Bloch) On two notions of total positivity for partial flag varieties. <a href="https://doi.org/10.1016/j.aim.2022.108855"><i>Adv. Math.</i> 414 (2023), Paper No. 108855, 24 pp</a>. <a href="https://arxiv.org/abs/2206.05806">arXiv:2206.05806</a>
