--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</td>
 
 					<td valign="top">
-						Office: 108 <a href="https://map.nd.edu/#/placemarks/1082">Hayes-Healy Center</a><br>
+						Office: <a href="office.png">108</a> <a href="https://map.nd.edu/#/placemarks/1082">Hayes-Healy Center</a><br>
 						Email: sk<!--despam-->a<!--despam-->rp2<span>&#x40;</span><span>nd&#x2e;e</span>du<br>
 						Office phone: 574-631-8706 
 					</td>
@@ -51,7 +51,7 @@
 <hr>
 
 <p>
-I am a visiting assistant professor in mathematics at the <a href="https://math.nd.edu/">University of Notre Dame</a>. I am interested in algebraic combinatorics.
+I am an Assistant Professor of Mathematics at the <a href="https://math.nd.edu/">University of Notre Dame</a>. I am interested in algebraic combinatorics.
 </p>
 <hr>
 
@@ -64,11 +64,11 @@ I am a visiting assistant professor in mathematics at the <a href="https://math.
 <h3>Publications and preprints</h3>
 
 <p>
-Also see <a href="https://arxiv.org/search/?searchtype=author&query=&quot;Steven+N.+Karp&quot;">arXiv</a>, <a href="https://scholar.google.com/citations?hl=en&user=M9SvJ-AAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a>, and <a href="http://www.ams.org/mathscinet/MRAuthorID/896855">MathSciNet</a>.
+Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https://scholar.google.com/citations?hl=en&user=M9SvJ-AAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a>, <a href="https://orcid.org/0000-0001-7163-667X">ORCID</a>, and <a href="https://mathscinet.ams.org/mathscinet/MRAuthorID/896855">MathSciNet</a>.
 </p>
 
 <ul>
-<li>(with Anthony M. Bloch) Symmetric Toda, gradient flows, and tridiagonalization. <a href="https://www.sciencedirect.com/journal/physica-d-nonlinear-phenomena"><i>Phys. D</i> (to appear)</a>, in honor of Hermann Flaschka. <a href="https://arxiv.org/abs/2304.10697">arXiv:2304.10697</a>
+<li>(with Anthony M. Bloch) Symmetric Toda, gradient flows, and tridiagonalization. <a href="https://doi.org/10.1016/j.physd.2023.133766"><i>Phys. D</i> 450 (2023), Paper No. 133766, 10 pp.</a>, in honor of Hermann Flaschka. <a href="https://arxiv.org/abs/2304.10697">arXiv:2304.10697</a>
 
 <li>(with Hugh Thomas) <i>q</i>-Whittaker functions, finite fields, and Jordan forms. <a href="https://arxiv.org/abs/2207.12590">arXiv:2207.12590</a>
 
