--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 
 <li>(with Anthony M. Bloch) On two notions of total positivity for partial flag varieties. <a href="https://doi.org/10.1016/j.aim.2022.108855"><i>Adv. Math.</i> 414 (2023), Paper No. 108855, 24 pp</a>. <a href="https://arxiv.org/abs/2206.05806">arXiv:2206.05806</a>
 
-<li>Wronskians, total positivity, and real Schubert calculus. <a href="https://arxiv.org/abs/2110.02301">arXiv:2110.02301</a>
+<li>Wronskians, total positivity, and real Schubert calculus. <a href="https://www.springer.com/journal/29"><i>Selecta Math. (N.S.)</i></a> (to appear). <a href="https://arxiv.org/abs/2110.02301">arXiv:2110.02301</a>
 
 <li>(with Anthony M. Bloch) Gradient flows, adjoint orbits, and the topology of totally nonnegative flag varieties. <a href="https://doi.org/10.1007/s00220-022-04540-5"><i>Comm. Math. Phys.</i> 398 (2023), no. 3, 1213&ndash;1289</a>. <a href="https://arxiv.org/abs/2109.04558">arXiv:2109.04558</a>
 
