--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 </p>
 
 <ul>
+<li>(with Kevin Purbhoo) Universal Pl&#252;cker coordinates for the Wronski map and positivity in real Schubert calculus. <a href="https://arxiv.org/abs/2309.04645">arXiv:2309.04645</a>
+
 <li>(with Anthony M. Bloch) Symmetric Toda, gradient flows, and tridiagonalization. <a href="https://doi.org/10.1016/j.physd.2023.133766"><i>Phys. D</i> 450 (2023), Paper No. 133766, 10 pp.</a>, in honor of Hermann Flaschka. <a href="https://arxiv.org/abs/2304.10697">arXiv:2304.10697</a>
 
 <li>(with Hugh Thomas) <i>q</i>-Whittaker functions, finite fields, and Jordan forms. <a href="https://arxiv.org/abs/2207.12590">arXiv:2207.12590</a>
@@ -102,6 +104,7 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 <h3>Teaching (University of Notre Dame)</h3>
 
 <ul>
+	<li>Fall 2023: <a href="https://canvas.nd.edu/courses/81197">Math 20550 (Calculus III)</a>, sections 5 and 6.<br>
 	<li>Spring 2023: <a href="https://www3.nd.edu/~craicu/20580Spring2023/math20580.html">Math 20580 (Introduction to linear algebra and differential equations)</a>, section 3; <a href="https://canvas.nd.edu/courses/63089">Math 40210 (Basic combinatorics)</a>.<br>
 	<li>Fall 2022: <a href="https://canvas.nd.edu/courses/50691">Math 30530 (Introduction to probability)</a>.<br>
 </ul>
