--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 <h3>Talk slides</h3>
 
 <ul>
+<li>Texas A&M University, September 2023: <a href="tamu2023.pdf">Positivity in real Schubert calculus</a><br>
+
 <li>Washington University, April 2023: <a href="washu2023.pdf">Gradient flows on totally nonnegative flag varieties</a><br>
 
 <li>University of Kentucky, March 2023: <a href="kentucky2023.pdf"><i>q</i>-Whittaker functions, finite fields, and Jordan forms</a><br>
