--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <table style="padding-bottom:12;">
 	<tr valign="top">
 		<td valign="top" style="padding-right:12;">
-			<img src="picture.jpg" alt="Steven Karp">
+			<img src="picture.jpg" alt="Photo by Matt Cashore/University of Notre Dame" height="180">
 		</td>
 
 		<td width="100%" valign="top">
