--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 
 <li>(with Hugh Thomas) <i>q</i>-Whittaker functions, finite fields, and Jordan forms. <a href="https://arxiv.org/abs/2207.12590">arXiv:2207.12590</a>
 
-<li>(with Anthony M. Bloch) On two notions of total positivity for partial flag varieties. <a href="https://doi.org/10.1016/j.aim.2022.108855"><i>Adv. Math.</i> 414 (2023), Paper No. 108855, 24 pp</a>. <a href="https://arxiv.org/abs/2206.05806">arXiv:2206.05806</a>
+<li>(with Anthony M. Bloch) On two notions of total positivity for partial flag varieties. <a href="https://doi.org/10.1016/j.aim.2022.108855"><i>Adv. Math.</i> 414 (2023), Paper No. 108855, 24 pp.</a> <a href="https://arxiv.org/abs/2206.05806">arXiv:2206.05806</a>
 
-<li>Wronskians, total positivity, and real Schubert calculus. <a href="https://doi.org/10.1007/s00029-023-00888-1"><i>Selecta Math. (N.S.)</i> 30 (2024), no. 1, Paper No. 1, 28 pp</a>. <a href="https://arxiv.org/abs/2110.02301">arXiv:2110.02301</a>
+<li>Wronskians, total positivity, and real Schubert calculus. <a href="https://doi.org/10.1007/s00029-023-00888-1"><i>Selecta Math. (N.S.)</i> 30 (2024), no. 1, Paper No. 1, 28 pp.</a> <a href="https://arxiv.org/abs/2110.02301">arXiv:2110.02301</a>
 
 <li>(with Anthony M. Bloch) Gradient flows, adjoint orbits, and the topology of totally nonnegative flag varieties. <a href="https://doi.org/10.1007/s00220-022-04540-5"><i>Comm. Math. Phys.</i> 398 (2023), no. 3, 1213&ndash;1289</a>. <a href="https://arxiv.org/abs/2109.04558">arXiv:2109.04558</a>
 
-<li>(with John Machacek) Shelling the <i>m</i>=1 amplituhedron. <a href="https://doi.org/10.5070/C63160419"><i>Comb. Theory</i> 3 (2023), no. 1, Paper No. 6, 22 pp.</a>. <a href="https://arxiv.org/abs/2104.02786">arXiv:2104.02786</a>
+<li>(with John Machacek) Shelling the <i>m</i>=1 amplituhedron. <a href="https://doi.org/10.5070/C63160419"><i>Comb. Theory</i> 3 (2023), no. 1, Paper No. 6, 22 pp.</a> <a href="https://arxiv.org/abs/2104.02786">arXiv:2104.02786</a>
 
 <li>(with Pavel Galashin and Thomas Lam) Regularity theorem for totally nonnegative flag varieties. <a href="https://doi.org/10.1090/jams/983"><i>J. Amer. Math. Soc.</i> 35 (2022), no. 2, 513&ndash;579</a>. <a href="https://arxiv.org/abs/1904.00527">arXiv:1904.00527</a>
 
@@ -90,7 +90,7 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 
 <li>(with Lauren K. Williams and Yan X Zhang) Decompositions of amplituhedra. Appendix written with Hugh Thomas. <a href="https://doi.org/10.4171/AIHPD/87"><i>Ann. Inst. Henri Poincar&eacute; D</i> 7 (2020), no. 3, 303&ndash;363</a>. <a href="https://arxiv.org/abs/1708.09525">arXiv:1708.09525</a>
 
-<li>(with Pavel Galashin and Thomas Lam) The totally nonnegative Grassmannian is a ball. <a href="https://doi.org/10.1016/j.aim.2021.108123"><i>Adv. Math.</i> 397 (2022), Paper No. 108123, 23 pp</a>. <a href="https://arxiv.org/abs/1707.02010">arXiv:1707.02010</a>
+<li>(with Pavel Galashin and Thomas Lam) The totally nonnegative Grassmannian is a ball. <a href="https://doi.org/10.1016/j.aim.2021.108123"><i>Adv. Math.</i> 397 (2022), Paper No. 108123, 23 pp.</a> <a href="https://arxiv.org/abs/1707.02010">arXiv:1707.02010</a>
 
 <li>(with Lauren K. Williams) The <i>m</i>=1 amplituhedron and cyclic hyperplane arrangements. <a href="https://doi.org/10.1093/imrn/rnx140"><i>Int. Math. Res. Not. IMRN</i> (2019), no. 5, 1401&ndash;1462</a>. <a href="https://arxiv.org/abs/1608.08288">arXiv:1608.08288</a>
 
@@ -125,6 +125,8 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 <h3>Talk slides</h3>
 
 <ul>
+<li>University of Minnesota, January 2024: <a href="minnesota2024.pdf">Positivity in real Schubert calculus</a><br>
+
 <li>Hamiltonian systems seminar, November 2023: <a href="hss2023.pdf">Gradient flows on totally nonnegative flag varieties</a><br>
 
 <li>Texas A&M University, September 2023: <a href="tamu2023.pdf">Positivity in real Schubert calculus</a><br>
@@ -177,7 +179,7 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 
 <li>University of Michigan, October 2017: <a href="michigan2017.pdf">Topology of positive spaces</a><br>
 
-<li>University of Minnesota, Twin Cities, September 2017: <a href="minnesota2017.pdf">Cyclic symmetry in the Grassmannian</a><br>
+<li>University of Minnesota, September 2017: <a href="minnesota2017.pdf">Cyclic symmetry in the Grassmannian</a><br>
 
 <li>FPSAC 2017: <a href="FPSAC2017.pdf">The <i>m</i>=1 amplituhedron and cyclic hyperplane arrangements</a><br>
 
