--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 <h3>Talk slides</h3>
 
 <ul>
+<li>Indiana University–Purdue University Indianapolis, January 2024: <a href="iupui2024.pdf">Positivity in real Schubert calculus</a><br>
+
 <li>University of Minnesota, January 2024: <a href="minnesota2024.pdf">Positivity in real Schubert calculus</a><br>
 
 <li>Hamiltonian systems seminar, November 2023: <a href="hss2023.pdf">Gradient flows on totally nonnegative flag varieties</a><br>
