--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 <h3>Teaching (University of Notre Dame)</h3>
 
 <ul>
+	<li>Spring 2024: <a href="https://canvas.nd.edu/courses/91027">Math 60610 (Basic discrete mathematics)</a>.<br>
 	<li>Fall 2023: <a href="https://canvas.nd.edu/courses/81197">Math 20550 (Calculus III)</a>, sections 5 and 6.<br>
 	<li>Spring 2023: <a href="https://www3.nd.edu/~craicu/20580Spring2023/math20580.html">Math 20580 (Introduction to linear algebra and differential equations)</a>, section 3; <a href="https://canvas.nd.edu/courses/63089">Math 40210 (Basic combinatorics)</a>.<br>
 	<li>Fall 2022: <a href="https://canvas.nd.edu/courses/50691">Math 30530 (Introduction to probability)</a>.<br>
