--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ I am an Assistant Professor of Mathematics at the <a href="https://math.nd.edu/"
 <h3>Publications and preprints</h3>
 
 <p>
-Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https://scholar.google.com/citations?hl=en&user=M9SvJ-AAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a>, <a href="https://mathscinet.ams.org/mathscinet/MRAuthorID/896855">MathSciNet</a>, and <a href="https://orcid.org/0000-0001-7163-667X">ORCID</a>.
+Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https://scholar.google.com/citations?hl=en&user=M9SvJ-AAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a>, <a href="https://mathscinet.ams.org/mathscinet/MRAuthorID/896855">MathSciNet</a>, <a href="https://orcid.org/0000-0001-7163-667X">ORCID</a>, and <a href="https://zbmath.org/authors/karp.steven-n">zbMATH</a>.
 </p>
 
 <ul>
@@ -126,6 +126,8 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 <h3>Talk slides</h3>
 
 <ul>
+<li>Purdue University, February 2024: <a href="purdue2024.pdf">Gradient flows on totally nonnegative flag varieties</a><br>
+
 <li>Indiana University–Purdue University Indianapolis, January 2024: <a href="iupui2024.pdf">Positivity in real Schubert calculus</a><br>
 
 <li>University of Minnesota, January 2024: <a href="minnesota2024.pdf">Positivity in real Schubert calculus</a><br>
