--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <hr>
 
 <p>
-I am an Assistant Professor of Mathematics at the <a href="https://math.nd.edu/">University of Notre Dame</a>. I am interested in algebraic combinatorics.
+I am an Assistant Professor of Mathematics at the <a href="https://math.nd.edu/">University of Notre Dame</a>. My research area is algebraic combinatorics.
 </p>
 <hr>
 
@@ -126,6 +126,8 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 <h3>Talk slides</h3>
 
 <ul>
+<li>University of Texas at Austin, February 2024: <a href="austin2024.pdf">Positivity in real Schubert calculus</a><br>
+
 <li>Purdue University, February 2024: <a href="purdue2024.pdf">Gradient flows on totally nonnegative flag varieties</a><br>
 
 <li>Indiana University–Purdue University Indianapolis, January 2024: <a href="iupui2024.pdf">Positivity in real Schubert calculus</a><br>
