--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 <h3>Talk slides</h3>
 
 <ul>
-<li>University of Illinois Urbana–Champaign, April 2024: <a href="stanley2024.pdf">Positivity in real Schubert calculus</a><br>
+<li>University of Illinois Urbana–Champaign, April 2024: <a href="uiuc2024.pdf">Positivity in real Schubert calculus</a><br>
 
 <li>Richard P. Stanley seminar in combinatorics, March 2024: <a href="stanley2024.pdf">Positivity in real Schubert calculus</a><br>
 
