--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 </p>
 
 <ul>
+<li>(with Evgeny Mukhin and Vitaly Tarasov) Positivity and universal Pl&#252;cker coordinates for spaces of quasi-exponentials. <a href="https://arxiv.org/abs/2405.20229">arXiv:2405.20229</a>
+
 <li>(with Kevin Purbhoo) Universal Pl&#252;cker coordinates for the Wronski map and positivity in real Schubert calculus. <a href="https://arxiv.org/abs/2309.04645">arXiv:2309.04645</a>
 
 <li>(with Anthony M. Bloch) Symmetric Toda, gradient flows, and tridiagonalization. <a href="https://doi.org/10.1016/j.physd.2023.133766"><i>Phys. D</i> 450 (2023), Paper No. 133766, 10 pp.</a>, in honor of Hermann Flaschka. <a href="https://arxiv.org/abs/2304.10697">arXiv:2304.10697</a>
