--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 <h3>Talk slides</h3>
 
 <ul>
+<li>FPSAC 2024: <a href="FPSAC2024.pdf">Positivity in real Schubert calculus</a><br>
+
 <li>University of Illinois Urbana–Champaign, April 2024: <a href="uiuc2024.pdf">Positivity in real Schubert calculus</a><br>
 
 <li>Richard P. Stanley seminar in combinatorics, March 2024: <a href="stanley2024.pdf">Positivity in real Schubert calculus</a><br>
