--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 <h3>Talk slides</h3>
 
 <ul>
+<li>University of California, Los Angeles, October 2024: <a href="ucla2024.pdf">Positivity in real Schubert calculus</a><br>
+
 <li>FPSAC 2024: <a href="FPSAC2024.pdf">Positivity in real Schubert calculus</a><br>
 
 <li>University of Illinois Urbana–Champaign, April 2024: <a href="uiuc2024.pdf">Positivity in real Schubert calculus</a><br>
