--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 
 <li>(with Anthony M. Bloch) Symmetric Toda, gradient flows, and tridiagonalization. <a href="https://doi.org/10.1016/j.physd.2023.133766"><i>Phys. D</i> 450 (2023), Paper No. 133766, 10 pp.</a>, in honor of Hermann Flaschka. <a href="https://arxiv.org/abs/2304.10697">arXiv:2304.10697</a>
 
-<li>(with Hugh Thomas) <i>q</i>-Whittaker functions, finite fields, and Jordan forms. <a href="https://arxiv.org/abs/2207.12590">arXiv:2207.12590</a>
+<li>(with Hugh Thomas) <i>q</i>-Whittaker functions, finite fields, and Jordan forms. <a href="https://www.springer.com/journal/29"><i>Selecta Math. (N.S.)</i></a> (to appear). <a href="https://arxiv.org/abs/2207.12590">arXiv:2207.12590</a>
 
 <li>(with Anthony M. Bloch) On two notions of total positivity for partial flag varieties. <a href="https://doi.org/10.1016/j.aim.2022.108855"><i>Adv. Math.</i> 414 (2023), Paper No. 108855, 24 pp.</a> <a href="https://arxiv.org/abs/2206.05806">arXiv:2206.05806</a>
 
