--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 <h3>Talk slides</h3>
 
 <ul>
+<li>Institute for Advanced Study, April 2025: Total positivity
+and real Schubert calculus (<a href="ias2025part1.pdf">part 1</a>, <a href="ias2025part2.pdf">part 2</a>)<br>
+
 <li>Georgia Institute of Technology, April 2025: <a href="georgiatech2025.pdf">Springer fibers and Richardson varieties</a><br>
 
 <li>University of California, Los Angeles, October 2024: <a href="ucla2024.pdf">Positivity in real Schubert calculus</a><br>
