--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 <h3>Talk slides</h3>
 
 <ul>
+<li>Drexel University, May 2025: <a href="drexel2025.pdf">Positivity in real Schubert calculus</a><br>
+
 <li>Institute for Advanced Study, April 2025: Total positivity
 and real Schubert calculus (<a href="ias2025part1.pdf">part 1</a>, <a href="ias2025part2.pdf">part 2</a>)<br>
 
