--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 <h3>Talk slides</h3>
 
 <ul>
+<li>CanaDAM 2025: <a href="CanaDAM2025.pdf">Total positivity in Schubert calculus</a><br>
+
 <li>Drexel University, May 2025: <a href="drexel2025.pdf">Positivity in real Schubert calculus</a><br>
 
 <li>Institute for Advanced Study, April 2025: Total positivity
