--- a/index.html
+++ b/index.html
@@ -68,13 +68,15 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 </p>
 
 <ul>
+<li>(with Martha E. Precup) Richardson tableaux and components of Springer fibers equal to Richardson varieties. <a href="https://arxiv.org/abs/2506.20792">arXiv:2506.20792</a>
+
 <li>(with Evgeny Mukhin and Vitaly Tarasov) Positivity and universal Pl&#252;cker coordinates for spaces of quasi-exponentials. <a href="https://arxiv.org/abs/2405.20229">arXiv:2405.20229</a>
 
 <li>(with Kevin Purbhoo) Universal Pl&#252;cker coordinates for the Wronski map and positivity in real Schubert calculus. <a href="https://arxiv.org/abs/2309.04645">arXiv:2309.04645</a>
 
 <li>(with Anthony M. Bloch) Symmetric Toda, gradient flows, and tridiagonalization. <a href="https://doi.org/10.1016/j.physd.2023.133766"><i>Phys. D</i> 450 (2023), Paper No. 133766, 10 pp.</a>, in honor of Hermann Flaschka. <a href="https://arxiv.org/abs/2304.10697">arXiv:2304.10697</a>
 
-<li>(with Hugh Thomas) <i>q</i>-Whittaker functions, finite fields, and Jordan forms. <a href="https://www.springer.com/journal/29"><i>Selecta Math. (N.S.)</i></a> (to appear). <a href="https://arxiv.org/abs/2207.12590">arXiv:2207.12590</a>
+<li>(with Hugh Thomas) <i>q</i>-Whittaker functions, finite fields, and Jordan forms. <a href="https://doi.org/10.1007/s00029-025-01048-3"><i>Selecta Math. (N.S.)</i></a> (to appear). <a href="https://arxiv.org/abs/2207.12590">arXiv:2207.12590</a>
 
 <li>(with Anthony M. Bloch) On two notions of total positivity for partial flag varieties. <a href="https://doi.org/10.1016/j.aim.2022.108855"><i>Adv. Math.</i> 414 (2023), Paper No. 108855, 24 pp.</a> <a href="https://arxiv.org/abs/2206.05806">arXiv:2206.05806</a>
 
