--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 <ul>
 <li>(with Martha E. Precup) Richardson tableaux and components of Springer fibers equal to Richardson varieties. <a href="https://arxiv.org/abs/2506.20792">arXiv:2506.20792</a>
 
-<li>(with Evgeny Mukhin and Vitaly Tarasov) Positivity and universal Pl&#252;cker coordinates for spaces of quasi-exponentials. <a href="https://academic.oup.com/imrn"><i>Int. Math. Res. Not. IMRN</i> (to appear)</a>. <a href="https://arxiv.org/abs/2405.20229">arXiv:2405.20229</a>
+<li>(with Evgeny Mukhin and Vitaly Tarasov) Positivity and universal Pl&#252;cker coordinates for spaces of quasi-exponentials. <a href="https://doi.org/10.1093/imrn/rnaf235"><i>Int. Math. Res. Not. IMRN</i> 2025, no. 15, Paper No. rnaf235, 20 pp.</a> <a href="https://arxiv.org/abs/2405.20229">arXiv:2405.20229</a>
 
 <li>(with Kevin Purbhoo) Universal Pl&#252;cker coordinates for the Wronski map and positivity in real Schubert calculus. <a href="https://arxiv.org/abs/2309.04645">arXiv:2309.04645</a>
 
 <li>(with Anthony M. Bloch) Symmetric Toda, gradient flows, and tridiagonalization. <a href="https://doi.org/10.1016/j.physd.2023.133766"><i>Phys. D</i> 450 (2023), Paper No. 133766, 10 pp.</a>, in honor of Hermann Flaschka. <a href="https://arxiv.org/abs/2304.10697">arXiv:2304.10697</a>
 
-<li>(with Hugh Thomas) <i>q</i>-Whittaker functions, finite fields, and Jordan forms. <a href="https://doi.org/10.1007/s00029-025-01048-3"><i>Selecta Math. (N.S.)</i> (to appear)</a>. <a href="https://arxiv.org/abs/2207.12590">arXiv:2207.12590</a>
+<li>(with Hugh Thomas) <i>q</i>-Whittaker functions, finite fields, and Jordan forms. <a href="https://doi.org/10.1007/s00029-025-01048-3"><i>Selecta Math. (N.S.)</i> 31 (2025), no. 4, Paper No. 77, 81 pp.</a> <a href="https://arxiv.org/abs/2207.12590">arXiv:2207.12590</a>
 
 <li>(with Anthony M. Bloch) On two notions of total positivity for partial flag varieties. <a href="https://doi.org/10.1016/j.aim.2022.108855"><i>Adv. Math.</i> 414 (2023), Paper No. 108855, 24 pp.</a> <a href="https://arxiv.org/abs/2206.05806">arXiv:2206.05806</a>
 
@@ -108,6 +108,7 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 <h3>Teaching (University of Notre Dame)</h3>
 
 <ul>
+	<li>Fall 2025: <a href="https://canvas.nd.edu/courses/118727">Math 30210 (Introduction to operations research)</a>.<br>
 	<li>Fall 2024: <a href="https://canvas.nd.edu/courses/95466">Math 30210 (Introduction to operations research)</a>; <a href="https://canvas.nd.edu/courses/95317">Math 30530 (Introduction to probability)</a>.<br>
 	<li>Spring 2024: <a href="https://canvas.nd.edu/courses/91027">Math 60610 (Basic discrete mathematics)</a>.<br>
 	<li>Fall 2023: <a href="https://canvas.nd.edu/courses/81197">Math 20550 (Calculus III)</a>, sections 5 and 6.<br>
