--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@ Also see <a href="https://arxiv.org/a/karp_s_1.html">arXiv</a>, <a href="https:/
 </p>
 
 <ul>
+<li>Zero-free sector of the Wronski map on the totally nonnegative Grassmannian. <a href="https://arxiv.org/abs/2508.18478">arXiv:2508.18478</a>
+
 <li>(with Martha E. Precup) Richardson tableaux and components of Springer fibers equal to Richardson varieties. <a href="https://arxiv.org/abs/2506.20792">arXiv:2506.20792</a>
 
 <li>(with Evgeny Mukhin and Vitaly Tarasov) Positivity and universal Pl&#252;cker coordinates for spaces of quasi-exponentials. <a href="https://doi.org/10.1093/imrn/rnaf235"><i>Int. Math. Res. Not. IMRN</i> 2025, no. 15, Paper No. rnaf235, 20 pp.</a> <a href="https://arxiv.org/abs/2405.20229">arXiv:2405.20229</a>
